# xdbc

./: AUTHORS  ChangeLog  Makefile.am  Makefile.in  aclocal.m4  autogen.sh  configure  configure.ac  configure.sh
examples/: Makefile.in
examples/port/: Makefile.am  Makefile.in  asn1parser_demo.cpp  calendar_demo.cpp  codec_demo.cpp  date_demo.cpp  featuresDemo.cpp  file_demo.cpp  math_demo.cpp  number_demo.cpp  process_demo.cpp  profile_demo.cpp  properties_demo.cpp  random_demo.cpp  schema.db  schema.ini  schema.properties  syslib_demo.cpp  system_demo.cpp  tokenizer_demo.cpp  unicode_demo.cpp  utilities_demo.cpp
examples/socket/: Makefile.am  Makefile.in  network_demo.cpp  server_demo.cpp  socket_demo.cpp
examples/xdbc/: DataSource_demo.cpp  Makefile.am  Makefile.in  SQLSource_demo.cpp  odbc.ini  run.sh  xdbc.ini  xdbc.sql  xdbc.sqls.ini  xdbc_arr_demo.cpp  xdbc_cursor_demo.cpp  xdbc_demo.cpp  xdbc_perf_demo.cpp  xdbc_proc_demo.cpp  xdbc_pstmt_demo.cpp  xdbc_stmt_demo.cpp
m4/: flags.m4  includes.m4  options.m4  types.m4
msvc/: Makefile.am  Makefile.in  opencode_vs8.sln
msvc/examples/: Makefile.am  Makefile.in  PortSuite.cpp  PortSuite.vcproj  SocketSuite.cpp  SocketSuite.vcproj  XdbcSuite.cpp  XdbcSuite.vcproj  odbc.ini  xdbc.ini  xdbc_demo.cpp  xdbc_demo.h
msvc/xdbcImpl/: Makefile.am  Makefile.in  libxdbc_oracle_oci.vcproj
xdbcImpl/: Makefile.am  Makefile.in
xdbcImpl/informix/: Makefile.in
xdbcImpl/informix/xdbc/: Makefile.am  Makefile.in  ifxArrayResultSet.ec  ifxArrayResultSet.h  ifxArrayResultSet_ec.cpp  ifxArrayStatement.ec  ifxArrayStatement.h  ifxArrayStatement_ec.cpp  ifxBlob.ec  ifxBlob.h  ifxBlob_ec.cpp  ifxCallableStatement.ec  ifxCallableStatement.h  ifxCallableStatement_ec.cpp  ifxClob.ec  ifxClob.h  ifxClob_ec.cpp  ifxConnection.ec  ifxConnection.h  ifxConnection_ec.cpp  ifxConversion.cpp  ifxConversion.h  ifxPreparedStatement.ec  ifxPreparedStatement.h  ifxPreparedStatement_ec.cpp  ifxResultSet.ec  ifxResultSet.h  ifxResultSetMetaData.cpp  ifxResultSetMetaData.h  ifxResultSet_ec.cpp  ifxSQL.cpp  ifxSQL.h  ifxStatement.ec  ifxStatement.h  ifxStatement_ec.cpp  ifxTypes.cpp  ifxTypes.h  ifx_lib.cpp  ifxdefs.cpp  ifxdefs.h  (+2 more)
xdbcImpl/mysql/: Makefile.am  Makefile.in  mysqlOptions.cpp
xdbcImpl/oracle/: Makefile.am  Makefile.in
xdbcImpl/oracle/xdbc/: Makefile.am  Makefile.in  oracle.h  oracleArrayResultSet.cpp  oracleArrayResultSet.h  oracleArrayStatement.cpp  oracleArrayStatement.h  oracleBlob.cpp  oracleBlob.h  oracleCallableStatement.cpp  oracleCallableStatement.h  oracleClob.cpp  oracleClob.h  oracleConnection.cpp  oracleConnection.h  oracleConversion.cpp  oracleConversion.h  oraclePreparedStatement.cpp  oraclePreparedStatement.h  oracleResultSet.cpp  oracleResultSet.h  oracleResultSetMetaData.cpp  oracleResultSetMetaData.h  oracleSQL.cpp  oracleSQL.h  oracleStatement.cpp  oracleStatement.h  oracleTypes.cpp  oracleTypes.h  oracle_lib.cpp  oradefs.cpp  oradefs.h  oramarco.h
